policykit-1 (0.105-5) UNRELEASED; urgency=medium

  * debian/control: Bump Standards-Version to 3.9.5 (no further changes)
  * debian/control: Use canonical VCS-* URL's

 -- Laurent Bigonville <bigon@debian.org>  Sat, 03 May 2014 13:05:06 +0200

policykit-1 (0.105-4) unstable; urgency=low

  * Acknowledge non-maintainer upload for CVE-2013-4288.
  * Also cherry-pick the upstream commit which deprecates the racy APIs.
  * debian/patches/09_pam_environment.patch: set process environment from
    pam_getenvlist().
  * debian/patches/01_pam_polkit.patch: adjust patch to invoke pam_env, so our
    global settings from /etc/environment are applied correctly.
  * The two changes above fix pkexec to properly export the pam environment.
    Thanks Steve Langasek for the patch. (Closes: #692340)

 -- Michael Biebl <biebl@debian.org>  Tue, 15 Oct 2013 18:34:24 +0200

policykit-1 (0.105-3+nmu1) unstable; urgency=high

  * Non-maintainer upload by the Security Team.
  * Fix cve-2013-4288: race condition in pkcheck.c (closes: #723717).

 -- Michael Gilbert <mgilbert@debian.org>  Mon, 14 Oct 2013 00:08:43 +0000

policykit-1 (0.105-3) unstable; urgency=low

  * 07_set-XAUTHORITY-environment-variable-if-unset.patch: Set XAUTHORITY
    environment variable to its default value $HOME/.Xauthority if unset.
    Some display managers, like KDM, do not set the XAUTHORITY variable, so
    starting graphical applications via pkexec was broken in those
    environments. (Closes: #671497)

 -- Michael Biebl <biebl@debian.org>  Thu, 20 Dec 2012 18:55:14 +0100

policykit-1 (0.105-2) unstable; urgency=low

  * Change the permissions of /etc/polkit-1/localauthority to 700, this
    directory is not supposed to be readable by everyone.

 -- Michael Biebl <biebl@debian.org>  Mon, 17 Dec 2012 17:02:06 +0100

policykit-1 (0.105-1) unstable; urgency=low

  * New upstream release.
  * debian/watch: Update URL, the tarballs are hosted on freedesktop.org now.