@@ -16,7 +16,8 @@ Build-Depends: debhelper (>= 9),
  gobject-introspection (>= 0.9.12-4~),
  gir1.2-glib-2.0,
  libglib2.0-doc,
- libgtk-3-doc
+ libgtk-3-doc,
+ libsystemd-login-dev [linux-any]
 Standards-Version: 3.9.5
 Vcs-Git: git://anonscm.debian.org/pkg-utopia/policykit.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-utopia/policykit.git;a=summary
@@ -24,7 +25,7 @@ Homepage: http://hal.freedesktop.org/docs/PolicyKit/
 
 Package: policykit-1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, consolekit, dbus
+Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-systemd [linux-any], consolekit [!linux-any], dbus
 Multi-Arch: foreign
 Description: framework for managing administrative policies and privileges
  PolicyKit is an application-level toolkit for defining and handling the policy
