@@ -9,12 +9,18 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 DPKG_GENSYMBOLS_CHECK_LEVEL=4
 export DPKG_GENSYMBOLS_CHECK_LEVEL
 
+ifeq (linux,$(DEB_HOST_ARCH_OS))
+  SYSTEMD_CONFIG_FLAG = --enable-systemd
+else
+  SYSTEMD_CONFIG_FLAG = --disable-systemd
+endif
+
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--enable-gtk-doc \
 		--enable-man-pages \
 		--enable-introspection \
-		--disable-systemd \
+		$(SYSTEMD_CONFIG_FLAG) \
 		--disable-examples \
 		--libexecdir=\$${prefix}/lib/policykit-1
 
