@@ -1,9 +1,10 @@
 policykit-1 (0.105-5) UNRELEASED; urgency=medium
 
+  * Enable systemd support on linux architectures
   * debian/control: Bump Standards-Version to 3.9.5 (no further changes)
   * debian/control: Use canonical VCS-* URL's
 
- -- Laurent Bigonville <bigon@debian.org>  Sat, 03 May 2014 13:05:06 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Sat, 03 May 2014 13:07:09 +0200
 
 policykit-1 (0.105-4) unstable; urgency=low
 
